Fix ios and android icon alignment

--- a/src/sentry/static/sentry/less/group-detail.less
+++ b/src/sentry/static/sentry/less/group-detail.less
@@ -836,13 +836,13 @@
     &.ios, &.macos, &.tvos, &.mac-os-x, &.mac {
       .context-item-icon {
         background-image: url(../images/icons/context/ios.svg);
-        top: 13px;
+        top: -2px;
       }
     }
 
     &.android .context-item-icon {
       background-image: url(../images/icons/context/android.svg);
-      top: 14px;
+      top: -1px;
     }
 
     &.windows .context-item-icon {
